--- a/QuanLyHocSinh/BLL/BLL.csproj
+++ b/QuanLyHocSinh/BLL/BLL.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A7102BE8-8135-4595-8142-9E7310559400}</ProjectGuid>
+    <ProjectGuid>{AE2CE933-C3BB-435C-B161-C2710296A4C4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BUS</RootNamespace>
-    <AssemblyName>BUS</AssemblyName>
+    <RootNamespace>BLL</RootNamespace>
+    <AssemblyName>BLL</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,16 +41,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HocSinhBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestBUS.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAL\DAL.csproj">
-      <Project>{24a9dc03-fd5a-4bea-9565-3662162d542d}</Project>
+      <Project>{05c7c28b-3316-403d-b6bd-065cc44b842d}</Project>
       <Name>DAL</Name>
     </ProjectReference>
     <ProjectReference Include="..\DTO\DTO.csproj">
-      <Project>{952d11ca-021e-4fc8-9fed-483402b17716}</Project>
+      <Project>{2eee5b96-cd94-4493-bd17-2043300a1c60}</Project>
       <Name>DTO</Name>
     </ProjectReference>
   </ItemGroup>
