--- a/QuanLyHocSinh/DTO/DTO.csproj
+++ b/QuanLyHocSinh/DTO/DTO.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{952D11CA-021E-4FC8-9FED-483402B17716}</ProjectGuid>
+    <ProjectGuid>{2EEE5B96-CD94-4493-BD17-2043300A1C60}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DTO</RootNamespace>
@@ -41,8 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HocSinh.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestDTO.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
